--- a/src/app/pages/contact-delivery/contact-delivery.component.html
+++ b/src/app/pages/contact-delivery/contact-delivery.component.html
@@ -109,6 +109,32 @@
 
 
     <div class="summary-order">
-        <p>Récapitulatif</p>
+        <p class="title">Récapitulatif de la commande</p>
+
+        <div class="product-cart">
+            <div class="img-container">
+                <div class="quantity-product-container">
+                    <span class="quantity-product">2</span>
+                </div>
+                
+                <img src="https://picsum.photos/200/300">
+            </div>
+            <div class="logo"><i class="fa-solid fa-book"></i></div>
+            <div class="price-total-product">13.03 €</div>
+        </div>
+
+        <div class="product-cart">
+            <div class="img-container">
+                <div class="quantity-product-container">
+                    <span class="quantity-product">2</span>
+                </div>
+                
+                <img src="https://picsum.photos/200/300">
+            </div>
+            <div class="logo"><i class="fa-solid fa-book"></i></div>
+            <div class="price-total-product">13.03 €</div>
+        </div>
+
+
     </div>
 </div>
