--- a/src/app/pages/contact-delivery/contact-delivery.component.scss
+++ b/src/app/pages/contact-delivery/contact-delivery.component.scss
@@ -86,7 +86,7 @@ $light-grey: #dedede;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 2.3em;
+            font-size: 2.6em;
             color: $marine-color;
             font-weight: 700;
 
@@ -175,8 +175,77 @@ $light-grey: #dedede;
     }
 
     .summary-order {
+        padding: 100px 60px;
         background-color: aliceblue;
         height: 100%;
+
+        .title {
+            font-size: 1.5em;
+            color: $marine-color;
+            font-weight:600;
+            margin-bottom: 50px;
+        }
+
+        .product-cart {
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid $light-grey;
+
+            .img-container {
+                display: flex;
+                justify-content: center;
+                width: 60px;
+                height: 60px;
+                background-color: white;
+                position: relative;
+
+                img {
+                    width: 40px;
+                    height: 60px;
+                }
+
+                .quantity-product-container {
+                    position: absolute;
+                    left: 40px;
+                    bottom: 38px;
+                    z-index: 2;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 18px;
+                    height: 18px;
+                    padding: 12px;
+                    background-color: white;
+                    border-radius: 50%;
+                    border: 2px solid $marine-color;
+    
+                    .quantity-product {
+                        font-size: 0.8em;
+                        font-weight: bold;
+                    }
+                }
+            }
+
+
+
+            .logo {
+                i {
+                    font-size: 1.5em;
+                    color: $light-grey;
+                }
+            }
+
+            .price-total-product {
+                color: grey;
+                font-weight: 500;
+                font-size: 1em;
+            }
+
+
+        }
 
     }
 
