--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -38,7 +38,7 @@
             <span class="value">EUR {{subtotal | number : '1.2-2'}}</span>
         </div>
 
-        <div class="actions">
+        <div class="actions my-5">
             <button class="continue-shopping-btn" routerLink="/product-list">Continuer mes achats</button>
             <button class="validate-order-btn" routerLink="/contact-delivery">Valider la commande</button>
         </div>
