account components OK

--- a/src/app/tools/navbar/navbar.component.html
+++ b/src/app/tools/navbar/navbar.component.html
@@ -34,7 +34,7 @@
                 <div class="user-actions logged-out" *ngIf="openUserPanel && isUserLogin">
                     <div class="arrow-dropdown"><i class="fa-solid fa-caret-up"></i></div>
                     <div class="action flex-center cursor-pointer" (click)="logout()">Se déconnecter</div>
-                    <div class="action flex-center cursor-pointer" routerLink="/login">Accéder à mon compte</div>
+                    <div class="action flex-center cursor-pointer" routerLink="/account">Paramètres de compte</div>
                 </div>
 
 
