--- a/src/app/pages/contact-delivery/contact-delivery.component.html
+++ b/src/app/pages/contact-delivery/contact-delivery.component.html
@@ -41,7 +41,8 @@
                 <div class="field">
                     <label for="country">PAYS</label>
                     <div class="select-container">
-                        <select name="country" id="country" formControlName="country">
+                        <select name="country" id="country" formControlName="country"
+                        [(ngModel)]="deliveryContact.country">
                             <option value="france">France</option>
                             <option value="spain">Espagne</option>
                             <option value="italy">Italie</option>
@@ -54,39 +55,44 @@
 
                 <div class="field">
                     <label for="firstname">Prénom</label>
-                    <input type="text" placeholder="Prénom" formControlName="firstname">
+                    <input type="text" placeholder="Prénom" formControlName="firstname"
+                    [(ngModel)]="deliveryContact.firstname">
                 </div>
 
                 <div class="field">
                     <label for="lastname">Nom</label>
-                    <input type="text" name="lastname" id="lastname" placeholder="Nom" formControlName="lastname">
+                    <input type="text" name="lastname" id="lastname" placeholder="Nom" formControlName="lastname"
+                    [(ngModel)]="deliveryContact.lastname">
                 </div>
 
                 <div class="field">
                     <label for="company">Entreprise</label>
-                    <input type="text" name="company" id="company" placeholder="Entreprise" formControlName="company">
+                    <input type="text" name="company" id="company" placeholder="Entreprise" formControlName="company"
+                    [(ngModel)]="deliveryContact.company">
                 </div>
 
                 <div class="field">
                     <label for="adress">Adresse</label>
-                    <input type="text" name="adress" id="adress" placeholder="Adresse" formControlName="adress">
+                    <input type="text" name="adress" id="adress" placeholder="Adresse" formControlName="adress"
+                    [(ngModel)]="deliveryContact.adress">
                 </div>
 
                 <div class="field">
                     <label for="postal-code">Code postal</label>
                     <input type="text" name="postal-code" id="postal-code" placeholder="Code postal"
-                        formControlName="postalCode">
+                    formControlName="postalCode" [(ngModel)]="deliveryContact.postalCode">
                 </div>
 
                 <div class="field">
                     <label for="adress">Ville</label>
-                    <input type="text" name="city" id="city" placeholder="Ville" formControlName="city">
+                    <input type="text" name="city" id="city" placeholder="Ville" formControlName="city"
+                    [(ngModel)]="deliveryContact.city">
                 </div>
 
                 <div class="field">
                     <label for="phone-number">Téléphone</label>
                     <input type="text" name="phone-number" id="phone-number" placeholder="Téléphone"
-                        formControlName="phoneNumber">
+                        formControlName="phoneNumber" [(ngModel)]="deliveryContact.phoneNumber">
                 </div>
 
                 <div class="save-delivery-infos">
@@ -99,22 +105,12 @@
 
 
                 <div class="actions">
-                    <div>
-                        <button (click)="initializePayment(5)">Paymant of $5</button>
-                    </div>
-
-                    <button class="continue-payment-btn" (click)="saveDeliveryContact()">Continuer vers le
-                        paiement</button>
+                    <button class="continue-payment-btn" (click)="saveDeliveryContact()">Continuer vers le paiement</button>
                 </div>
 
             </div>
 
         </form>
-
-
-
-
-
     </div>
 
 
