--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
 <div class="bg-white py-5">
     <div class="container">
 
-        <h1>Bienvenue sur notre site</h1>
+        <h1>Bienvenue sur notre librairie en ligne</h1>
 
         <div class="create-account">
 
