--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -15,7 +15,7 @@
             </div>
 
             <div class="field" id="password">
-                <input type="text" id="password-input" placeholder='' formControlName="password">
+                <input type="password" id="password-input" placeholder='' formControlName="password">
                 <label for="password-input">Mot de passe *</label>
             </div>
 
